# Projet_Stage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  parserXCSPtoCHR.sh  solveCHR.sh
ext/solvint/: solvint.chrpp  solvint.cpp  solvint.h  solvint_global.h
instances/: MagicSquare_07.xml  MagicSquare_08.xml  MagicSquare_1.xml  MagicSquare_2.xml  MagicSquare_3.xml  Sudoku_4_4.xml  gcd.chrpp  gcd.xml  simple.xml  sudoku.chrpp  sudoku_mini.xml  test.chrpp  test.xml  test2.xml  test3.xml  test4.xml
instances/Basic/Basic-m1-s1/: Dominoes-grid1.xml  Dominoes-grid1.xml.lzma  LabeledDice.xml  LabeledDice.xml.lzma  Purdey.xml.lzma  Recipe.xml  Recipe.xml.lzma  Zebra.xml
instances/MagicSquare/MagicSquare-m1-gp/: MagicSquare-9-f10-02.xml.lzma  MagicSquare-9-f10-03.xml.lzma  MagicSquare-9-f10-04.xml.lzma  MagicSquare-9-f10-05.xml.lzma  MagicSquare-9-f10-06.xml.lzma  MagicSquare-9-f10-07.xml.lzma  MagicSquare-9-f10-08.xml.lzma  MagicSquare-9-f10-09.xml.lzma  MagicSquare-9-f10-10.xml.lzma  MagicSquare-9-f10-11.xml.lzma  MagicSquare-9-f10-12.xml.lzma  MagicSquare-9-f10-13.xml.lzma  MagicSquare-9-f10-14.xml.lzma  MagicSquare-9-f10-15.xml.lzma  MagicSquare-9-f10-16.xml.lzma  MagicSquare-9-f10-17.xml.lzma  MagicSquare-9-f10-18.xml.lzma  MagicSquare-9-f10-19.xml.lzma  (+21 more)
src/: CHRCallbacks.cpp  CHRCallbacks.h  CHRParser.h  CHRStructBuilder.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h  RuleAllDiff.cpp  RuleAllDiff.h  RuleFactory.h  RuleInstantiation.cpp  RuleInstantiation.h  RuleIntension.cpp  RuleIntension.h  RuleLinear.cpp  RuleLinear.h  RuleRaw.h  main.cpp  utils.h
(+145 files in other folders)
